--- a/BirdNames.Blazor/Pages/Index.razor
+++ b/BirdNames.Blazor/Pages/Index.razor
@@ -16,4 +16,8 @@
   <li><a href="https://www.worldbirdnames.org/new/ioc-lists/master-list-2/">IOC World Bird List</a> Bird,Genus,Family and Order data and </li>
   <li><a href="https://www.adobe.com/products/photoshop-lightroom-classic.html">Adobe Lightroom Classic</a></li>
 </ul>
-<SurveyPrompt Title="How is Blazor working for you?" />
+
+<h3>Download</h3>
+<p>
+Configure and download a hierarchical bird names keyword list. Click <a href="/download">here</a>
+</p>
