--- a/BirdNames.Blazor/Shared/MainLayout.razor
+++ b/BirdNames.Blazor/Shared/MainLayout.razor
@@ -9,7 +9,7 @@
 
   <main>
     <div class="top-row px-4">
-      <a href="https://github.com/jacodv/bird-names" target="_blank">About</a>
+      <a href="https://github.com/jacodv/BirdNames" target="_blank">Github Project</a>
     </div>
 
     <article class="content px-4">
