--- a/BirdNames.Blazor/Shared/NavMenu.razor
+++ b/BirdNames.Blazor/Shared/NavMenu.razor
@@ -24,6 +24,11 @@
         <span class="oi oi-plus" aria-hidden="true"></span> Statistics
       </NavLink>
     </div>
+    <div class="nav-item px-3">
+      <NavLink class="nav-link" href="admin">
+        <span class="oi oi-plus" aria-hidden="true"></span> Admin
+      </NavLink>
+    </div>
   </nav>
 </div>
 
