--- a/BirdNames.Blazor/Shared/MainLayout.razor
+++ b/BirdNames.Blazor/Shared/MainLayout.razor
@@ -2,6 +2,11 @@
 
 <PageTitle>Keyword Generator</PageTitle>
 
+<RadzenDialog />
+<RadzenNotification />
+<RadzenTooltip />
+<RadzenContextMenu />
+
 <div class="page">
   <div class="sidebar">
     <NavMenu />
