--- a/BirdNames.Blazor/Shared/NavMenu.razor
+++ b/BirdNames.Blazor/Shared/NavMenu.razor
@@ -26,7 +26,7 @@
     </div>
     <div class="nav-item px-3">
       <NavLink class="nav-link" href="admin">
-        <span class="oi oi-plus" aria-hidden="true"></span> Admin
+        <span class="oi oi-cog" aria-hidden="true"></span> Admin
       </NavLink>
     </div>
   </nav>
