--- a/BirdNames.Blazor/Pages/Index.razor
+++ b/BirdNames.Blazor/Pages/Index.razor
@@ -21,7 +21,13 @@
   Configure and download a hierarchical bird names keyword list. Click <a href="/download">here</a>
 </p>
 
-  @code
+<h3>GraphQL Api (/graphql)</h3>
+<p>Use the GraphQL Api UI.  Click <a href="/graphql">here</a></p>
+
+<h3>Rest Api (/api)</h3>
+<p>Use the Swagger UI.  Click <a href="/swagger">here</a></p>
+
+@code
   {
     [Parameter]
     public bool Valid { get; set; }
